# stalinize

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.DOC  COPYING.LIB  Makefile  README.md  build.sh
debian/: changelog  changelog.dch.save  control  files  rules
debian/stalinizer/DEBIAN/: control  md5sums
etc/: stalinzer.conf
src/cgi/: CMakeLists.txt  CMakeLists2.txt  CMakeLists_compose.txt  CMakeLists_main.txt  Stalin6_mask.xcf  cmake_install.cmake  compose.c  env.h  haarcascade_frontalface_alt.xml  multipart.cpp  multipart.h  post.sh  runcgi.sh  stalinize.c  stalinize.html  stalinize_input.html  stalinize_results.html
